--- a/study3.css
+++ b/study3.css
@@ -46,7 +46,7 @@
     padding: 5px;
     justify-content:center;
     /* align-content: 100vh; */
-    background-color: #f2f0f0
+    background-color: #ffffff
 }
 
 .grid-container > div {
